--- a/brewery-to-jupyter.ipynb
+++ b/brewery-to-jupyter.ipynb
@@ -295,12 +295,295 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>beer_style</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>review_overall</th>\n",
+       "      <th>beer_abv</th>\n",
+       "      <th>review_aroma</th>\n",
+       "      <th>review_appearance</th>\n",
+       "      <th>review_taste</th>\n",
+       "      <th>average_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Drammen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Euro Dark Lager</td>\n",
+       "      <td>Aass Brewery</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Drammen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>German Pilsener</td>\n",
+       "      <td>Aass Brewery</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Drammen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Vienna Lager</td>\n",
+       "      <td>Aass Brewery</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Drammen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Euro Pale Lager</td>\n",
+       "      <td>Aass Brewery</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Drammen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Bock</td>\n",
+       "      <td>Aass Brewery</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id     city state       beer_style  brewery_name  review_overall  beer_abv  \\\n",
+       "0   4  Drammen  None  Euro Dark Lager  Aass Brewery             1.5       4.5   \n",
+       "1   4  Drammen  None  German Pilsener  Aass Brewery             2.0       5.5   \n",
+       "2   4  Drammen  None     Vienna Lager  Aass Brewery             2.0       6.5   \n",
+       "3   4  Drammen  None  Euro Pale Lager  Aass Brewery             2.0       4.7   \n",
+       "4   4  Drammen  None             Bock  Aass Brewery             2.0       6.5   \n",
+       "\n",
+       "   review_aroma  review_appearance  review_taste  average_score  \n",
+       "0           3.5                3.5           2.0           2.63  \n",
+       "1           2.0                2.0           2.5           2.13  \n",
+       "2           2.0                3.0           2.0           2.25  \n",
+       "3           2.0                3.5           2.5           2.50  \n",
+       "4           3.0                4.0           4.0           3.25  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviewed_breweries_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>review_overall</th>\n",
+       "      <th>review_aroma</th>\n",
+       "      <th>review_appearance</th>\n",
+       "      <th>beer_style</th>\n",
+       "      <th>review_taste</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>beer_abv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>882</td>\n",
+       "      <td>Savannah</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Moon River Brewing Company</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>American Porter</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>The Captain's Porter</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>882</td>\n",
+       "      <td>Savannah</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Moon River Brewing Company</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Scotch Ale / Wee Heavy</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>The Highland Stagger</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>882</td>\n",
+       "      <td>Savannah</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Moon River Brewing Company</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>American IPA</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Swamp Fox IPA</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>882</td>\n",
+       "      <td>Savannah</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Moon River Brewing Company</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Scotch Ale / Wee Heavy</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>The Highland Stagger</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>882</td>\n",
+       "      <td>Savannah</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>Moon River Brewing Company</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Belgian Pale Ale</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Inspiration Ale</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id      city    state                brewery_name  review_overall  \\\n",
+       "0  882  Savannah  Georgia  Moon River Brewing Company             3.5   \n",
+       "1  882  Savannah  Georgia  Moon River Brewing Company             3.5   \n",
+       "2  882  Savannah  Georgia  Moon River Brewing Company             4.0   \n",
+       "3  882  Savannah  Georgia  Moon River Brewing Company             4.0   \n",
+       "4  882  Savannah  Georgia  Moon River Brewing Company             4.0   \n",
+       "\n",
+       "   review_aroma  review_appearance              beer_style  review_taste  \\\n",
+       "0           3.5                3.0         American Porter           3.5   \n",
+       "1           4.0                4.5  Scotch Ale / Wee Heavy           3.5   \n",
+       "2           4.5                3.5            American IPA           4.0   \n",
+       "3           3.5                4.0  Scotch Ale / Wee Heavy           3.5   \n",
+       "4           3.5                3.0        Belgian Pale Ale           4.0   \n",
+       "\n",
+       "              beer_name  beer_abv  \n",
+       "0  The Captain's Porter       6.0  \n",
+       "1  The Highland Stagger       NaN  \n",
+       "2         Swamp Fox IPA       5.8  \n",
+       "3  The Highland Stagger       NaN  \n",
+       "4       Inspiration Ale       6.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviewed_breweries.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rev"
-   ]
+   "source": []
   }
  ],
  "metadata": {
